<resources>
    <string name="app_name">World Tour Guide</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rk_rj">RK RJ Studio</string>
    <string name="location">Location</string>
    <string name="visitors">Visitors Information</string>
    <string name="about">About</string>
    <string name="description">Description</string>
    <string name="deccontent_eiffel">
        Gustave Eiffels iconic, wrought-iron 1889 tower, with steps and elevators to observation
        decks.</string>
    <string name="deccontent_taj">
        17th-century, Mughal-style, marble mausoleum with minarets, a mosque
        and famously symmetrical gardens.></string>
    <string name="deccontent_statue">
        Iconic National Monument opened in 1886, offering guided tours, a museum and city views.</string>
    <string name="deccontent_sagrada">
        Antoni Gaudís renowned unfinished church, started in the 1880s, with museum and city views.</string>
    <string name="deccontent_wall">
        Ancient world wonder that winds for more than 5,500 miles across China, with towers and
        walkways.</string>
    <string name="deccontent_colosseum">
        Monumental 3-tiered Roman amphitheater once used for gladiatorial games, with guided tour
        option.</string>
    <string name="taj_time">
        LOCATION"      "-"     "Dharmapuri, Tajganj\n
        CITY"               "-"     "Agra\n
        STATE"            "-"     "Uttar Pradesh\n
        COUNTRY"      "-"     "India\n
        HEIGHT"          "-"     "73 m (240 ft)\n
        BUILT"              "-"     "1632–1653\n
        ARCHITECT"     "-"     "Ahmad Lahauri\n
        ARCH. STYLE"     "-"     "Mughal Arch.\n
        VISITORS"        "-"     "7–8 Million\n
        OPENED"          "-"     "1648\n</string>
    <string name="eiffel_time">
        LOCATION"      "-"     "Champ de Mars\n
        CITY"              "-"        "Paris\n
        COUNTRY"       "-"     "France\n
        HEIGHT"           "-"     "300 m, 324 m to tip\n
        BUILT"              "-"       "1887–89\n
        ARCHITECT"     "-"     "Stephen Sauvestre\n
        VISITORS"        "-"      "7 Million/Year\n
        OPENED"          "-"      "1889\n</string>
    <string name="statue_time">
        LOCATION"     "-"    "Liberty Island\n
        CITY"              "-"      "New York City\n
        COUNTRY"     "-"      "France\n
        HEIGHT"         "-"     "93 meters\n
        BUILT"            "-"     "October 28, 1886\n
        AECHITECT"   "-"     "Frédéric Auguste\n
        VISITORS"     "-"     "4.5 Million/Year\n
        OPENED"       "-"     "1886\n</string>
    <string name="sagrada_time">
        LOCATION"     "-"    "Carrer de Mallorca\n
        CITY"             "-"      "Barcelona\n
        COUNTRY"      "-"      "Spain\n
        HEIGHT"         "-"     "172 m\n
        BUILT"            "-"     "1882-2010\n
        ARCHITECT"   "-"     "Antoni Gaudí\n
        VISITORS"       "-"     "3 Million/Year\n
        OPENED"        "-"     "7 November 2010\n</string>
    <string name="wall_time">
        LOCATION"      "-"    "Huairou\n
        CITY"             "-"      "Beijing\n
        COUNTRY"      "-"     "China\n
        HEIGHT"         "-"     "7.8 m (25 ft 7 in) high\n
        BUILT"             "-"     "2000 years ago\n
        LENGHT"          "-"     "21,196 km\n
        ARCHITECT"    "-"     "Qin Shi Huang\n
        VISITORS"        "-"     "10 Million/Year\n</string>
    <string name="colosseum_time">
        LOCATION"       "-"    "Piazza del Colosseo\n
        CITY"                "-"     "Rome\n
        COUNTRY"        "-"     "Italy\n
        HEIGHT"            "-"     "48 m\n
        ARCHITECT"    "-"     "Vespasian, Titus\n
        BUILT IN"          "-"     "70–80 AD\n
        VISITORS"        "-"     "4 Million/Year\n
        OPENED"          "-"     "80 AD\n</string>
    <string name="visitorinfo_taj">
        ★ OPENING HOURS"   "-"   "Sunrise to Sunset\n\n
        ★ FREE ENTRY"   "-"   "Children below 15 years\n\n
        ★ INDIAN VISITORS"   "-"   "Rs.40\n\n
        ★ SAARC and BIMSTEC COUNTRIES"   "-"   "Rs.530\n\n
        ★ OTHER FOREIGN VISITORS"   "-"   "Rs.1000\n\n
        ★ NOTE"   "-"   "Fridays Closed</string>
    <string name="visitorinfo_sagrada">
        "                        "★ When to visit\n
          ● The Sagrada Família is always crowded, but the queues will be at their
        shortest in the early morning or late afternoon\n\n
        "                        "★ Opening hours\n
          ● November to February, 9 am to 6 pm\n
          ● March, 9 am to 7 pm\n
          ● April to September, 9 am to 8 pm\n
          ● October, 9 am to 7 pm\n\n
          ● December(25,26) January(1,6,9)\n\n
        "                        "★ How to get there\n
          ● Take the metro to the Sagrada Familia stop!\n\n
        "                        "★ ENTRY FEES\n
          ● Prices start at 15€\n
          ● Free to see from the outside</string>
    <string name="sagrada_fact_content">
        ● The ground-breaking for La Sagrada Familia took place in 1882.\n\n
        ● The expected completion date for completion of La Sagrada Familia is 2041.\n\n
        ● The original idea for La Sagrada Familia came from the publisher Josep Bocabella, who was
        inspired after a trip to the Vatican.\n\n
        ● The construction of La Sagrada Familia has been funded by donations.\n\n
        ● After Antoni Gaudis death Domenec Sugranes I Gras took over. His work was interrupted in
        1936 with the Spanish Civil War.\n\n
        ● As of October 2015 La Sagrada Familia is estimated to be 70% complete.\n\n
        ● In 2010 an organ was installed in the un-finished La Sagrada Familia, making it possible
        to hold religious services.\n\n
        ● The Nave, the Crypt, the Museum, the Shop, and the Nativity and Passion towers are accessible
        by tourists.\n\n
        ● The full name of La Sagrada Familia is Basilica I Temple Expiatori de la Sagrada Familia.\n</string>
    <string name="about_sagrada_1">
        ★ The Basílica i Temple Expiatori de la Sagrada Família (Basilica and Expiatory Church
        of the Holy Family) is the largest unfinished Roman Catholic church in world and is located
        in Barcelona, designed by Catalan architect Antoni Gaudí (1852–1926). Gaudís work on the
        building is part of a UNESCO World Heritage Site.\n\n
        ★ In 1882, construction of Sagrada Família started under architect Francisco Paula de
        Villar. In 1883, when Villar resigned, Gaudí took over as chief architect, transforming the
        project with his architectural and engineering style, combining Gothic and curvilinear Art
        Nouveau forms. Gaudí devoted the remainder of his life to the project, and at the time of his
        death at age 73 in 1926, less than a quarter of the project was complete.\n\n
        ★ The basilica has a long history of dividing the citizens of Barcelona: over the initial
        possibility it might compete with Barcelonas cathedral, over Gaudís design itself, over the
        possibility that work after Gaudís death disregarded his design,and the 2007 proposal to
        build an underground tunnel of Spains high-speed rail link to France which could disturb its
        stability.\n\n
        ★ Describing Sagrada Família, art critic Rainer Zerbst said it is probably impossible
        to find a church building anything like it in the entire history of art, and Paul Goldberger
        describes it as the most extraordinary personal interpretation of Gothicarchitecture since
        the Middle Ages.</string>
    <string name="about_sagrada_inside">
        ★ The Basilica of the Sagrada Família was the inspiration of a bookseller, Josep Maria
        Bocabella, founder of Asociación Espiritual de Devotos de San José\n </string>
    <string name="about_sagrada_2">
        ★ On the subject of the extremely long construction period, Gaudí is said to have remarked:
        My client is not in a hurry. When Gaudí died in 1926, the basilica was between 15 and 25
        percent complete. After Gaudís death, work continued under the direction of Domènec Sugrañes
        i Gras until interrupted by the Spanish Civil War in 1936.\n\n
        ★ Parts of the unfinished basilica and Gaudís models and workshop were destroyed during the
        war by Catalan anarchists. The present design is based on reconstructed versions of the plans
        that were burned in a fire as well as on modern adaptations. Since 1940 the architects Francesc
        Quintana, Isidre Puig Boada, Lluís Bonet i Gari and Francesc Cardoner have carried on the work.
        The illumination was designed by Carles Buïgas. \n\n
        ★ Parts of the unfinished basilica and Gaudís models and workshop were destroyed during
        the war by Catalan anarchists. The present design is based on reconstructed versions of the
        plans that were burned in a fire as well as on modern adaptations. Since 1940 the architects
        Francesc Quintana, Isidre Puig Boada, Lluís Bonet i Gari and Francesc Cardoner have carried
        on the work. The illumination was designed by Carles Buïgas.\n\n
        ★ The style of la Sagrada Família is variously likened to Spanish Late Gothic, Catalan
        Modernism and to Art Nouveau or Catalan Noucentisme. While the Sagrada Família falls within
        the Art Nouveau period, Nikolaus Pevsner points out that, along with Charles Rennie Macintosh
        in Glasgow, Gaudí carried the Art Nouveau style far beyond its usual application as a surface
        decoration.</string>
    <string name="about_sagrada_architects">★ The Sagrada Familia by Antoni Gaudí.\n</string>
    <string name="contactinfo_sagrada">
        ★ Official Contacts\n
          "       "" "(+34) 932 080 414\n
          "       "" "(From Monday to Thursday from 8:00 AM to 5:45 PM.)\n\n
          "       "" "(Friday from 8:00 AM to 2:30 PM.)\n\n
        ★ info@sagradafamilia.gov.in\n
          "       "" "( excluding declared holidays and sundays )\n\n</string>
    <string name="sagrada_in">Interior</string>
    <string name="sagrada_interior1">
        ★ The church plan is that of a Latin cross with five aisles. The central nave vaults reach
        forty-five metres (150 ft) while the side nave vaults reach thirty metres (100 ft). The
        transept has three aisles. The columns are on a 7.5 metre (25 ft) grid.\n</string>
    <string name="sagrada_interior2">
        ★ The crossing rests on the four central columns of porphyry supporting a great hyperboloid
        surrounded by two rings of twelve hyperboloids (currently under construction). The central
        vault reaches sixty metres (200 ft). The apse is capped by a hyperboloid vault reaching
        seventy-five metres (250 ft).\n</string>
    <string name="sagrada_interior3">
        ★ The columns of the interior are a unique Gaudí design. Besides branching to support their
        load, their ever-changing surfaces are the result of the intersection of various geometric
        forms. The simplest example is that of a square base evolving into an octagon as the column
        rises, then a sixteen-sided form, and eventually to a circle.\n</string>
</resources>