<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/coordinate_layout"
    tools:context="com.example.android.worldtourguide.spain.SagradaSpainActivity">

    <android.support.design.widget.AppBarLayout
        style="@style/app_bar"
        android:background="@drawable/sagrada_main">

        <include layout="@layout/app_bar_layout" />

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            style="@style/parent_main_layout">

            <TextView style="@style/description_TV_head" />

            <View
                style="@style/Line"
                android:background="@color/material_grey" />

            <TextView
                style="@style/description_TV_bottom"
                android:text="@string/deccontent_sagrada" />

            <android.support.v7.widget.CardView
                style="@style/card_view"
                app:cardBackgroundColor="@color/green"
                tools:targetApi="lollipop">

                <LinearLayout style="@style/child_LL">

                    <ImageView
                        style="@style/visitors_image_view"
                        android:src="@drawable/sagrada_location"
                        tools:ignore="ContentDescription" />

                    <TextView style="@style/location_TV_head" />

                    <TextView
                        style="@style/location_TV_bottom"
                        android:text="@string/sagrada_time" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                style="@style/card_view"
                app:cardBackgroundColor="@color/teal"
                tools:targetApi="lollipop">

                <LinearLayout style="@style/child_LL">

                    <ImageView
                        style="@style/visitors_image_view"
                        android:src="@drawable/sagrada_visitors"
                        tools:ignore="ContentDescription" />

                    <TextView style="@style/visitors_TV_head" />

                    <TextView
                        style="@style/visitors_TV_bottom"
                        android:text="@string/visitorinfo_sagrada" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <include layout="@layout/slide_container" />

            <android.support.v7.widget.CardView
                style="@style/card_view"
                app:cardBackgroundColor="@color/amber"
                tools:targetApi="lollipop">

                <LinearLayout
                    style="@style/child_LL"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        style="@style/visitors_image_view"
                        android:src="@drawable/quick_fact"
                        tools:ignore="ContentDescription" />

                    <TextView
                        style="@style/visitors_TV_bottom"
                        android:text="@string/sagrada_fact_content" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <TextView style="@style/about_TV_head" />

            <View
                style="@style/Line"
                android:background="@color/material_grey" />

            <TextView
                style="@style/about_TV_bottom"
                android:text="@string/about_sagrada_1" />

            <TextView
                style="@style/about_TV_bottom"
                android:text="@string/about_sagrada_inside" />

            <ImageView
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:src="@drawable/sagrada_inside"
                tools:ignore="ContentDescription" />

            <TextView
                style="@style/about_TV_bottom"
                android:text="@string/about_sagrada_architects" />

            <ImageView
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="8dp"
                android:src="@drawable/frederic"
                tools:ignore="ContentDescription" />

            <TextView
                style="@style/about_TV_bottom"
                android:text="@string/about_sagrada_2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingTop="8dp"
                android:text="@string/sagrada_in"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20sp"
                android:textStyle="bold" />

            <View style="@style/Line" />

            <TextView
                style="@style/description_TV_bottom"
                android:text="@string/sagrada_interior1"
                android:textColor="@color/white" />

            <ImageView
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:src="@drawable/sagrada_in_1"
                tools:ignore="ContentDescription" />

            <TextView
                style="@style/about_TV_bottom"
                android:text="@string/sagrada_interior2" />

            <ImageView
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:src="@drawable/sagrada_in_2"
                tools:ignore="ContentDescription" />

            <TextView
                style="@style/about_TV_bottom"
                android:text="@string/sagrada_interior3" />

            <ImageView
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:src="@drawable/sagrada_in_3"
                tools:ignore="ContentDescription" />

            <LinearLayout style="@style/parent_contact">

                <TextView style="@style/contact_TV_head" />

                <View style="@style/Line" />

                <TextView
                    style="@style/contact_TV_bottom"
                    android:text="@string/contactinfo_sagrada" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/map_view"
        style="@style/fab_action"
        app:backgroundTint="@color/grey"
        app:fabSize="normal" />

</android.support.design.widget.CoordinatorLayout>